--- a/src/public/tester.html
+++ b/src/public/tester.html
@@ -14,6 +14,9 @@
                 background-color: #f0f0f0;
                 white-space: pre-wrap;
             }
+            h1 {
+                margin: 20px;
+            }
             button.btn-large,
             select {
                 margin: 5px 0px 5px 20px;
